2006-02-01  Keith Marshall  <keithmarshall@users.sourceforge.net>

	* src/win32/Makefile.in (GCC): Make it use AC_SUBSTed `CC'.

2006-01-24  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Clean up `make' rules for installing message catalogues.

	* aclocal.m4 (MAN_PROG_GENCAT): Improve descriptive commentary.
	(MAN_NLS_LOCALE_CACHE_INIT): Always define `locale', even when NLS
	support is disabled; do not canonicalise to Win32 form.
	(MAN_NLS_LOCALE_DIRECTORY): Modified to define...
	(locale_prefix, locale_path): ...these; new AC_SUBST variables.

	* configure: Regenerated.

	* msgs/Makefile.in (install): Rewrite all commands; based on...
	(locale, locale_prefix, locale_path): New AC_SUBSTed variables.
	(stamp.cat): Improved reporting of `make' progress.

	* msgs/inst.sh: Redundant file; deleted.

2006-01-16  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Update for building message catalogues with relocated gencat.

	* aclocal.m4 (MAN_PROG_GENCAT): New macro...
	(MAN_NLS_PREREQUISITES): ...AC_REQUIRE it.
	(MAN_PROG_GENCAT_PROVIDE, MAN_PROG_GENCAT_VALIDATE): New macros; used
	by MAN_PROG_GENCAT.
	(man_tools_required): New AC_SUBST variable; defined by...
	(MAN_AC_TOOLS_DEFAULT): New macro; AC_REQUIRED by MAN_PROG_GENCAT.

	* configure: Regenerated.

	* Makefile.in (gencat): Remove all references.
	(man_tools_required): Use it to specify tools to MAKE.

	* msgs/Makefile.in: Add copyright notice, etc.
	(GENCAT, MKMSGS): Define, and...
	(all): ...Use them; rewrite all commands; make dependent on...
	(stamp.cat): New target.
	(gencat): Redundant target; delete and remove all dependencies.

	* msgs/gencat207fix.sh, msgs/gencat.in: Redundant files; deleted.

2006-01-04  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Relocate gencat sources to tools directory.

	* gencat/Makefile.in: File deleted.
	* gencat/gencat.c, gencat/genlib.c: Files moved...
	* tools/gencat.c, tools/genlib.c: ...to here.
	* gencat/gencat.h, gencat/msgcat.h: Files moved...